--- a/client/src/components/Contact.css
+++ b/client/src/components/Contact.css
@@ -56,6 +56,7 @@
     text-transform: uppercase;
     border: 1px solid #000;
     background-color: #e2dcdc;
+    color: #000;
     font-family: 'Space Mono', 'Monospace', 'Courier New';
     font-size: 1.2rem;
     z-index: 2;
