--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  background-color: #e2dcdc;
+  background-color: var(--background-color);
+  color: var(--text-color);
   font-family: 'Space Mono', 'Monospace', 'Courier New';
   font-weight: 400;
 }
@@ -20,6 +21,7 @@ h1 {
   font-weight: 700;
   font-size: 8rem;
   margin: 0;
+  color: var(--heading-color);
 }
 
 h3 {
