--- a/client/src/components/About.css
+++ b/client/src/components/About.css
@@ -7,6 +7,7 @@
 
 #about h2 {
     font-size: 3rem;
+    color: var(--heading-color);
 }
 
 #about p {
@@ -32,7 +33,7 @@
 }
 
 .img-shadow {
-    background: black;
+    background: var(--shadow-color);
 }
 
 .prof-pic {
@@ -46,7 +47,7 @@
 }
 
 .img-border {
-    border: 2px solid #fff;
+    border: 2px solid var(--img-border-color);
     transform: translate(0.7rem, -0.7rem);
     z-index: 2;
 }
