--- a/client/src/components/Projects.css
+++ b/client/src/components/Projects.css
@@ -15,6 +15,7 @@
 #projects h2 {
     font-weight: 400;
     font-size: 1.2rem;
+    color: var(--heading-color);
 }
 
 .project-gallery {
@@ -35,15 +36,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    background-color: #545454;
-    color: #fff;
+    background-color: var(--project-card-color);
+    color: var(--project-text-color);
     padding: 1rem 2rem;
     margin: 2rem 1rem;
     text-align: center;
 }
 
 .project-card:hover {
-    background-color: #333;
+    background-color: var(--project-card-hover-color);
 }
 
 .project-title {
@@ -67,9 +68,9 @@
 
 .project-btn button {
     text-transform: uppercase;
-    border: 1px solid #fff;
+    border: 1px solid var(--project-button-color);
     background-color: inherit;
-    color: #fff;
+    color: var(--project-button-color);
     font-family: 'Space Mono', 'Monospace', 'Courier New';
     font-size: 1rem;
     position: absolute;
@@ -81,7 +82,7 @@
 }
 
 .btn-shadow {
-    background-color: #fff;
+    background-color: var(--project-button-color);
     position: absolute;
     top: 0;
     z-index: 1;
@@ -105,7 +106,7 @@
     font-weight: 700;
     font-size: 1.2rem;
     padding: 0;
-    color: #272727;
+    color: var(--resume-button-color);
 }
 
 .arrow-icon {
@@ -119,7 +120,7 @@
 .resume-btn:after {
     content: '';
     display: block;
-    border-bottom: 2px solid #272727;
+    border-bottom: 2px solid var(--resume-button-color);
     transform: scaleX(0);
     transition: transform 0.3s ease-in-out;
 }
