Project card color change

--- a/client/src/theme.css
+++ b/client/src/theme.css
@@ -25,7 +25,7 @@
     --img-border-color: #e2dcdc;
     --shadow-color: #e2dcdc;
     --project-text-color: #000;
-    --project-card-color: #cac9c9;
+    --project-card-color: #c5bdbd;
     --project-card-hover-color: #e2dcdc;
     --project-button-color: #000;
     --resume-button-color: #e2dcdc;
